GNOME Bugzilla – Bug 677098
Ensure we stop transitions on remove_child()
Last modified: 2012-05-31 09:00:10 UTC
When removing a child we let the transitions run, assuming that the child will be disposed. This obviously does not apply if the actor is being moved around with a live reference somewhere.
Created attachment 215244 [details] [review] actor: Stop transitions on remove_child() There's no point in having transitions running when removing a child, so we just stop them.
fixed by Alex in git: http://git.gnome.org/browse/clutter/commit/?id=4634dde6134507ad6598bf4c0c97a70890aaf9dc